<resources>
    <string name="app_name">NotesApp</string>
    <string name="birthday">День рождения</string>
    <string name="birthday_info">День рождение мамы</string>
    <string name="birthday_date">02.02.2022</string>
    <string name="gym">Сходить в зал</string>
    <string name="gym_info">Встреча с тренером</string>
    <string name="gym_date">20.04.2022</string>
    <string name="exam">Экзамен</string>
    <string name="exam_info">экзамен по матану</string>
    <string name="exam_date">21.04.2022</string>
    <string name="interview">Интеврью</string>
    <string name="interview_info">Собеседование на работу</string>
    <string name="interview_date">24.04.2022</string>
    <string name="note_title">Заметки</string>
    <string name="football">Футбол турнир</string>
    <string name="football_info">Турнир по футболу во вторник</string>
    <string name="football_date">02.05.2022</string>
    <string name="add_note">Добавить заметку</string>
    <string name="add_note_title">Заголовок</string>
    <string name="add_note_description">Описание заметки</string>
    <string name="save_note">Сохранить</string>
    <string name="action_info">Info</string>
    <string name="action_search">Поиск</string>
    <string name="action_share">Поделиться</string>
    <string name="action_photo">Share photo</string>
    <string name="settings">Настройки</string>
    <string name="about">Developers</string>
    <string name="font_size">Размер шрифта</string>
    <string name="language">Смена языка</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="save_settings">Сохранить</string>
    <string name="notifications">Notifications</string>
    <string name="close_app">CLOSE APP</string>
    <string name="close_app_dialog_title">Do you want to close app?</string>
    <string name="save_action">SAVED</string>
    <string name="ok">OK</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
</resources>